chore: use ResourceType enum instead of resourceType Strings